@@ -1,8 +1,10 @@
 1.0 "Asieoniezi"
 
 0.119 "TBA"
- 371453 priority for post is not high enough (Frederic Crozat)
- 371720 references: field can cause thunderbird to break threads (Frederic Crozat)
+ 370195 uulib/fptools.c crash (António Godinho)
+ 370930 speed up header pane filtering (Vincent Dupaquis)
+ 371453 priority for post isn't high enough (Frederic Crozat)
+ 371720 references: field breaks threads in thunderbird (Frederic Crozat)
 
 0.118 "Gustaf Von Musterhausen"
  358061 try to make multiple connections at once. (Duncan)
